--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,15 +1,25 @@
-image: jelaniwoods/appdev2023-photogram-industrial-tmp
+image: jelaniwoods/appdev2023-rails-template
 
 tasks:
   - before: |
+      sudo cp -r /home/student /home/gitpod
+      (cd /home/gitpod/student; sudo find . -maxdepth 1 -exec mv {} .. \;)
+      source ~/.bashrc
+      sudo chmod 777 /home/gitpod && sudo chown -R gitpod /home/gitpod
+      export GEM_HOME=/workspace/.rvm
+      export GEM_PATH=$GEM_HOME:$GEM_PATH
+      export PATH=/workspace/.rvm/bin:$PATH
       bin/setup
-      .vscode/manage_extensions
 ports:
   - port: 3000
     onOpen: open-preview
     visibility: public
-  - port: 9500-9999
-    onOpen: ignore
+  - port: 4567
+    onOpen: open-preview
+    visibility: public
+  - port: 9292
+    onOpen: open-preview
+    visibility: public
   - port: 5432
     onOpen: ignore
 
@@ -18,3 +28,5 @@ vscode:
     - vortizhe.simple-ruby-erb
     - mbessey.vscode-rufo
     - aliariff.vscode-erb-beautify
+    - eamodio.gitlens
+    - setobiralo.erb-commenter
